# comic-text-detector-docker

./: .gitmodules  Dockerfile  README.md  download_model.py  main.py  pyproject.toml
.github/workflows/: release.yml
patch/: torchsummary.py  tqdm.py
