[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
name = "torch"

[tool.pdm]
[project]
dependencies = [
    "torch>=2.0.1",
    "fastapi>=0.98.0",
    "opencv-python-headless>=4.7.0.72",
    "setuptools>=68.0.0",
    "torchvision>=0.15.2",
    "uvicorn[standard]>=0.22.0",
    "pyclipper>=1.3.0.post4",
    "shapely>=2.0.1",
    "python-multipart>=0.0.6",
]
requires-python = ">=3.10"
